fix: Index page styling (dark mode)

--- a/src/pages/index.modules.css
+++ b/src/pages/index.modules.css
@@ -25,7 +25,7 @@
 .yma__header .yma__description {
   margin-bottom: 2rem;
   font-size: 1.5rem;
-  color: #404756;
+  color: #2d323c;
 }
 
 .yma__primary__button,
